refactoring code for a class per file and for >PHP 5.3 only; loads of changes;

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Mimex"]
 	path = Mimex
 	url = git://github.com/nocive/Mimex.git
+[submodule "lib/Externals/Mimex"]
+	path = lib/Externals/Mimex
+	url = git@github.com:nocive/Mimex.git
